// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenarios DELETE_SCENARIO_SUCCESS 1`] = `Array []`;

exports[`scenarios DELETE_SCENARIO_SUCCESS 2`] = `Array []`;

exports[`scenarios DELETE_SCENARIO_SUCCESS 3`] = `Object {}`;

exports[`scenarios DELETE_SCENARIO_SUCCESS 4`] = `Object {}`;

exports[`scenarios GET_SCENARIOS_SUCCESS 1`] = `
Array [
  Object {
    "author": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    "categories": Array [],
    "consent": Object {
      "id": 57,
      "prose": "<p>Educators and researchers in the <a href=\\"http://tsl.mit.edu/\\">MIT Teaching Systems Lab</a> would like to include your responses in research about improving this experience and learning how to better prepare teachers for the classroom.<br><br>All data you enter is protected by <a href=\\"https://couhes.mit.edu/\\">MIT's IRB review procedures</a>.</p><p>None of your personal information will be shared.<br><br>More details are available in the consent form itself.</p>",
    },
    "created_at": "2020-02-31T17:50:28.029Z",
    "deleted_at": null,
    "description": "A scenario about \\"Multiplayer Scenario\\"",
    "finish": Object {
      "components": Array [
        Object {
          "html": "<h2>Thanks for participating!</h2>",
          "type": "Text",
        },
      ],
      "id": 1,
      "is_finish": true,
      "title": "",
    },
    "id": 42,
    "lock": Object {
      "created_at": "2020-01-01T23:54:19.934Z",
      "ended_at": null,
      "scenario_id": 42,
      "user_id": 999,
    },
    "status": 1,
    "title": "Multiplayer Scenario",
    "updated_at": null,
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_author": true,
        "is_reviewer": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "super",
        ],
        "username": "super",
      },
    ],
  },
]
`;

exports[`scenarios GET_SCENARIOS_SUCCESS 2`] = `
Array [
  Object {
    "author": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    "categories": Array [],
    "consent": Object {
      "id": 57,
      "prose": "<p>Educators and researchers in the <a href=\\"http://tsl.mit.edu/\\">MIT Teaching Systems Lab</a> would like to include your responses in research about improving this experience and learning how to better prepare teachers for the classroom.<br><br>All data you enter is protected by <a href=\\"https://couhes.mit.edu/\\">MIT's IRB review procedures</a>.</p><p>None of your personal information will be shared.<br><br>More details are available in the consent form itself.</p>",
    },
    "created_at": "2020-02-31T17:50:28.029Z",
    "deleted_at": null,
    "description": "A scenario about \\"Multiplayer Scenario\\"",
    "finish": Object {
      "components": Array [
        Object {
          "html": "<h2>Thanks for participating!</h2>",
          "type": "Text",
        },
      ],
      "id": 1,
      "is_finish": true,
      "title": "",
    },
    "id": 42,
    "lock": Object {
      "created_at": "2020-01-01T23:54:19.934Z",
      "ended_at": null,
      "scenario_id": 42,
      "user_id": 999,
    },
    "status": 1,
    "title": "Multiplayer Scenario",
    "updated_at": null,
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_author": true,
        "is_reviewer": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "super",
        ],
        "username": "super",
      },
    ],
  },
]
`;

exports[`scenarios GET_SCENARIOS_SUCCESS 3`] = `
Object {
  "42": Object {
    "author": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    "categories": Array [],
    "consent": Object {
      "id": 57,
      "prose": "<p>Educators and researchers in the <a href=\\"http://tsl.mit.edu/\\">MIT Teaching Systems Lab</a> would like to include your responses in research about improving this experience and learning how to better prepare teachers for the classroom.<br><br>All data you enter is protected by <a href=\\"https://couhes.mit.edu/\\">MIT's IRB review procedures</a>.</p><p>None of your personal information will be shared.<br><br>More details are available in the consent form itself.</p>",
    },
    "created_at": "2020-02-31T17:50:28.029Z",
    "deleted_at": null,
    "description": "A scenario about \\"Multiplayer Scenario\\"",
    "finish": Object {
      "components": Array [
        Object {
          "html": "<h2>Thanks for participating!</h2>",
          "type": "Text",
        },
      ],
      "id": 1,
      "is_finish": true,
      "title": "",
    },
    "id": 42,
    "lock": Object {
      "created_at": "2020-01-01T23:54:19.934Z",
      "ended_at": null,
      "scenario_id": 42,
      "user_id": 999,
    },
    "status": 1,
    "title": "Multiplayer Scenario",
    "updated_at": null,
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_author": true,
        "is_reviewer": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "super",
        ],
        "username": "super",
      },
    ],
  },
}
`;

exports[`scenarios GET_SCENARIOS_SUCCESS 4`] = `
Object {
  "42": Object {
    "author": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    "categories": Array [],
    "consent": Object {
      "id": 57,
      "prose": "<p>Educators and researchers in the <a href=\\"http://tsl.mit.edu/\\">MIT Teaching Systems Lab</a> would like to include your responses in research about improving this experience and learning how to better prepare teachers for the classroom.<br><br>All data you enter is protected by <a href=\\"https://couhes.mit.edu/\\">MIT's IRB review procedures</a>.</p><p>None of your personal information will be shared.<br><br>More details are available in the consent form itself.</p>",
    },
    "created_at": "2020-02-31T17:50:28.029Z",
    "deleted_at": null,
    "description": "A scenario about \\"Multiplayer Scenario\\"",
    "finish": Object {
      "components": Array [
        Object {
          "html": "<h2>Thanks for participating!</h2>",
          "type": "Text",
        },
      ],
      "id": 1,
      "is_finish": true,
      "title": "",
    },
    "id": 42,
    "lock": Object {
      "created_at": "2020-01-01T23:54:19.934Z",
      "ended_at": null,
      "scenario_id": 42,
      "user_id": 999,
    },
    "status": 1,
    "title": "Multiplayer Scenario",
    "updated_at": null,
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_author": true,
        "is_reviewer": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "super",
        ],
        "username": "super",
      },
    ],
  },
}
`;

exports[`scenarios SET_SCENARIOS 1`] = `
Array [
  Object {
    "author": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    "categories": Array [],
    "consent": Object {
      "id": 57,
      "prose": "<p>Educators and researchers in the <a href=\\"http://tsl.mit.edu/\\">MIT Teaching Systems Lab</a> would like to include your responses in research about improving this experience and learning how to better prepare teachers for the classroom.<br><br>All data you enter is protected by <a href=\\"https://couhes.mit.edu/\\">MIT's IRB review procedures</a>.</p><p>None of your personal information will be shared.<br><br>More details are available in the consent form itself.</p>",
    },
    "created_at": "2020-02-31T17:50:28.029Z",
    "deleted_at": null,
    "description": "A scenario about \\"Multiplayer Scenario\\"",
    "finish": Object {
      "components": Array [
        Object {
          "html": "<h2>Thanks for participating!</h2>",
          "type": "Text",
        },
      ],
      "id": 1,
      "is_finish": true,
      "title": "",
    },
    "id": 42,
    "lock": Object {
      "created_at": "2020-01-01T23:54:19.934Z",
      "ended_at": null,
      "scenario_id": 42,
      "user_id": 999,
    },
    "status": 1,
    "title": "Multiplayer Scenario",
    "updated_at": null,
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_author": true,
        "is_reviewer": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "super",
        ],
        "username": "super",
      },
    ],
  },
]
`;

exports[`scenarios SET_SCENARIOS 2`] = `
Array [
  Object {
    "author": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    "categories": Array [],
    "consent": Object {
      "id": 57,
      "prose": "<p>Educators and researchers in the <a href=\\"http://tsl.mit.edu/\\">MIT Teaching Systems Lab</a> would like to include your responses in research about improving this experience and learning how to better prepare teachers for the classroom.<br><br>All data you enter is protected by <a href=\\"https://couhes.mit.edu/\\">MIT's IRB review procedures</a>.</p><p>None of your personal information will be shared.<br><br>More details are available in the consent form itself.</p>",
    },
    "created_at": "2020-02-31T17:50:28.029Z",
    "deleted_at": null,
    "description": "A scenario about \\"Multiplayer Scenario\\"",
    "finish": Object {
      "components": Array [
        Object {
          "html": "<h2>Thanks for participating!</h2>",
          "type": "Text",
        },
      ],
      "id": 1,
      "is_finish": true,
      "title": "",
    },
    "id": 42,
    "lock": Object {
      "created_at": "2020-01-01T23:54:19.934Z",
      "ended_at": null,
      "scenario_id": 42,
      "user_id": 999,
    },
    "status": 1,
    "title": "Multiplayer Scenario",
    "updated_at": null,
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_author": true,
        "is_reviewer": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "super",
        ],
        "username": "super",
      },
    ],
  },
]
`;

exports[`scenarios SET_SCENARIOS 3`] = `
Object {
  "42": Object {
    "author": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    "categories": Array [],
    "consent": Object {
      "id": 57,
      "prose": "<p>Educators and researchers in the <a href=\\"http://tsl.mit.edu/\\">MIT Teaching Systems Lab</a> would like to include your responses in research about improving this experience and learning how to better prepare teachers for the classroom.<br><br>All data you enter is protected by <a href=\\"https://couhes.mit.edu/\\">MIT's IRB review procedures</a>.</p><p>None of your personal information will be shared.<br><br>More details are available in the consent form itself.</p>",
    },
    "created_at": "2020-02-31T17:50:28.029Z",
    "deleted_at": null,
    "description": "A scenario about \\"Multiplayer Scenario\\"",
    "finish": Object {
      "components": Array [
        Object {
          "html": "<h2>Thanks for participating!</h2>",
          "type": "Text",
        },
      ],
      "id": 1,
      "is_finish": true,
      "title": "",
    },
    "id": 42,
    "lock": Object {
      "created_at": "2020-01-01T23:54:19.934Z",
      "ended_at": null,
      "scenario_id": 42,
      "user_id": 999,
    },
    "status": 1,
    "title": "Multiplayer Scenario",
    "updated_at": null,
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_author": true,
        "is_reviewer": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "super",
        ],
        "username": "super",
      },
    ],
  },
}
`;

exports[`scenarios SET_SCENARIOS 4`] = `
Object {
  "42": Object {
    "author": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    "categories": Array [],
    "consent": Object {
      "id": 57,
      "prose": "<p>Educators and researchers in the <a href=\\"http://tsl.mit.edu/\\">MIT Teaching Systems Lab</a> would like to include your responses in research about improving this experience and learning how to better prepare teachers for the classroom.<br><br>All data you enter is protected by <a href=\\"https://couhes.mit.edu/\\">MIT's IRB review procedures</a>.</p><p>None of your personal information will be shared.<br><br>More details are available in the consent form itself.</p>",
    },
    "created_at": "2020-02-31T17:50:28.029Z",
    "deleted_at": null,
    "description": "A scenario about \\"Multiplayer Scenario\\"",
    "finish": Object {
      "components": Array [
        Object {
          "html": "<h2>Thanks for participating!</h2>",
          "type": "Text",
        },
      ],
      "id": 1,
      "is_finish": true,
      "title": "",
    },
    "id": 42,
    "lock": Object {
      "created_at": "2020-01-01T23:54:19.934Z",
      "ended_at": null,
      "scenario_id": 42,
      "user_id": 999,
    },
    "status": 1,
    "title": "Multiplayer Scenario",
    "updated_at": null,
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_author": true,
        "is_reviewer": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "super",
        ],
        "username": "super",
      },
    ],
  },
}
`;

exports[`scenarios UNLOCK_SCENARIO_SUCCESS 1`] = `Array []`;

exports[`scenarios UNLOCK_SCENARIO_SUCCESS 2`] = `Array []`;

exports[`scenarios UNLOCK_SCENARIO_SUCCESS 3`] = `Object {}`;

exports[`scenarios UNLOCK_SCENARIO_SUCCESS 4`] = `Object {}`;
